# douyin-to-text

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml
examples/: sample_transcript.txt
src/douyin_to_text/: __init__.py  asr.py  cli.py  config.py  fetcher.py  pipeline.py  summarize.py  web.py
tests/: manual_e2e.py  test_smoke.py
